dm vdo: move funnel-requestqueue to dm-vdo/indexer/
Only ever used by indexer code.

Signed-off-by: Mike Snitzer <snitzer@kernel.org>

--- a/drivers/md/dm-vdo/Makefile
+++ b/drivers/md/dm-vdo/Makefile
@@ -15,7 +15,6 @@ dm-vdo-objs := \
 	errors.o \
 	flush.o \
 	funnel-queue.o \
-	funnel-requestqueue.o \
 	funnel-workqueue.o \
 	int-map.o \
 	io-submitter.o \
@@ -41,6 +40,7 @@ dm-vdo-objs := \
 	indexer/chapter-index.o \
 	indexer/config.o \
 	indexer/delta-index.o \
+	indexer/funnel-requestqueue.o \
 	indexer/geometry.o \
 	indexer/index.o \
 	indexer/index-layout.o \
